force-app/main/default/objects/Visit/fields/axsy_emr__ActualVisitEndLocation__c.field-meta.xml
<CustomField>
    <fullName>axsy_emr__ActualVisitEndLocation__c</fullName>
    <description>Geolocation when the User ends a Visit</description>
    <label>Actual Visit End Location</label>
    <scale>7</scale>
    <type>Location</type>
</CustomField>