force-app/main/default/objects/Visit/fields/axsy_emr__ActualVisitStartLocation__c.field-meta.xml
<CustomField>
    <fullName>axsy_emr__ActualVisitStartLocation__c</fullName>
    <description>Latitude and Longitude when User starts the visit</description>
    <label>Actual Visit Start Location</label>
    <scale>7</scale>
    <type>Location</type>
</CustomField>