force-app/main/default/objects/Visit/fields/CADMV_ActualTimeOfInspection__c.field-meta.xml
<CustomField>
    <fullName>CADMV_ActualTimeOfInspection__c</fullName>
    <formula>ActualVisitEndTime - ActualVisitStartTime</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Actual Time of Inspection</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>