force-app/main/default/objects/Visit/fields/CADMV_ApplicantCommunityURLForEmail__c.field-meta.xml
<CustomField>
    <fullName>CADMV_ApplicantCommunityURLForEmail__c</fullName>
    <formula>$CustomMetadata.CADMV_OrganizationSettings__mdt.CADMV_ApplicantCommunityURL.CADMV_URL__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Applicant Community URL For Email</label>
    <type>Text</type>
</CustomField>