force-app/main/default/objects/Visit/fields/CADMV_ApplicantEmail__c.field-meta.xml
<CustomField>
    <fullName>CADMV_ApplicantEmail__c</fullName>
    <label>Applicant Email</label>
    <type>Email</type>
</CustomField>