force-app/main/default/objects/Visit/fields/CADMV_ApplicantName__c.field-meta.xml
<CustomField>
    <fullName>CADMV_ApplicantName__c</fullName>
    <label>Applicant Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>