force-app/main/default/objects/Visit/fields/CADMV_BusinessAddress__c.field-meta.xml
<CustomField>
    <fullName>CADMV_BusinessAddress__c</fullName>
    <formula>&apos;DO NOT USE&apos;</formula>
    <label>Business Address DO NOT USE</label>
    <type>Text</type>
</CustomField>