force-app/main/default/objects/Visit/fields/CADMV_BusinessAddressForEmail__c.field-meta.xml
<CustomField>
    <fullName>CADMV_BusinessAddressForEmail__c</fullName>
    <label>Business Address For Email</label>
    <type>TextArea</type>
</CustomField>