force-app/main/default/objects/Visit/fields/CADMV_BusinessName__c.field-meta.xml
<CustomField>
    <fullName>CADMV_BusinessName__c</fullName>
    <formula>Account.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Business Name</label>
    <type>Text</type>
</CustomField>