force-app/main/default/objects/Visit/fields/CADMV_BusinessNameForEmail__c.field-meta.xml
<CustomField>
    <fullName>CADMV_BusinessNameForEmail__c</fullName>
    <label>Business Name for Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>