force-app/main/default/objects/Visit/fields/CADMV_DMVURLForEmail__c.field-meta.xml
<CustomField>
    <fullName>CADMV_DMVURLForEmail__c</fullName>
    <formula>$CustomMetadata.CADMV_OrganizationSettings__mdt.OrgUrl.CADMV_URL__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DMV URL For Email</label>
    <type>Text</type>
</CustomField>