force-app/main/default/objects/Visit/fields/CADMV_InspectorsRegion__c.field-meta.xml
<CustomField>
    <fullName>CADMV_InspectorsRegion__c</fullName>
    <description>This is used for reporting purposes to be able to link the region a specific inspector is related to</description>
    <label>Inspectors Region</label>
    <length>100</length>
    <type>Text</type>
</CustomField>