force-app/main/default/objects/Visit/fields/CADMV_InspectorsTerritoryName__c.field-meta.xml
<CustomField>
    <fullName>CADMV_InspectorsTerritoryName__c</fullName>
    <label>Inspectors Territory Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>