force-app/main/default/objects/Visit/fields/CADMV_LicenseType__c.field-meta.xml
<CustomField>
    <fullName>CADMV_LicenseType__c</fullName>
    <label>License Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>