force-app/main/default/objects/Visit/fields/CADMV_OfficePhoneNumber__c.field-meta.xml
<CustomField>
    <fullName>CADMV_OfficePhoneNumber__c</fullName>
    <description>Sprint 1: Oct 20 Used for Email Notifications while scheduling an appointment.</description>
    <label>Office Phone Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>