force-app/main/default/objects/Visit/fields/CADMV_PlannedEndTimeforEmail__c.field-meta.xml
<CustomField>
    <fullName>CADMV_PlannedEndTimeforEmail__c</fullName>
    <formula>IF ( DATEVALUE( PlannedVisitEndTime ) &gt;=
DATE ( YEAR (DATEVALUE(PlannedVisitEndTime)),3,1)
+
(
14-
CASE( MOD(DATE ( YEAR (DATEVALUE(PlannedVisitEndTime)),3,1) - DATE (1900,1,7),7) ,
0,7,MOD(DATE ( YEAR (DATEVALUE(PlannedVisitEndTime)),3,1) - DATE (1900,1,7),7))
)
&amp;&amp;
DATEVALUE(PlannedVisitEndTime) &lt;
DATE ( YEAR (DATEVALUE(PlannedVisitEndTime)),11,1)
+
(
7-
CASE( MOD(DATE ( YEAR (DATEVALUE(PlannedVisitEndTime)),11,1) - DATE (1900,1,7),7) ,
0,7,MOD(DATE ( YEAR (DATEVALUE(PlannedVisitEndTime)),11,1) - DATE (1900,1,7),7))
),
timevalue( PlannedVisitEndTime -7/24),
timevalue(PlannedVisitEndTime -8/24))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Planned End Time for Email</label>
    <type>Time</type>
</CustomField>