force-app/main/default/objects/Visit/fields/CADMV_PlannedStartDateForEmail__c.field-meta.xml
<CustomField>
    <fullName>CADMV_PlannedStartDateForEmail__c</fullName>
    <description>Referenced this field in Email notification(Inspection scheduled notification email)</description>
    <formula>DATEVALUE(PlannedVisitStartTime)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Planned Start Date For Email</label>
    <type>Date</type>
</CustomField>