force-app/main/default/objects/Visit/fields/CADMV_PlannedStartTimeForEmail__c.field-meta.xml
<CustomField>
    <fullName>CADMV_PlannedStartTimeForEmail__c</fullName>
    <formula>IF ( DATEVALUE(PlannedVisitStartTime) &gt;=
DATE ( YEAR (DATEVALUE(PlannedVisitStartTime)),3,1)
+
(
14-
CASE( MOD(DATE ( YEAR (DATEVALUE(PlannedVisitStartTime)),3,1) - DATE (1900,1,7),7) ,
0,7,MOD(DATE ( YEAR (DATEVALUE(PlannedVisitStartTime)),3,1) - DATE (1900,1,7),7))
)
&amp;&amp;
DATEVALUE(PlannedVisitStartTime) &lt;
DATE ( YEAR (DATEVALUE(PlannedVisitStartTime)),11,1)
+
(
7-
CASE( MOD(DATE ( YEAR (DATEVALUE(PlannedVisitStartTime)),11,1) - DATE (1900,1,7),7) ,
0,7,MOD(DATE ( YEAR (DATEVALUE(PlannedVisitStartTime)),11,1) - DATE (1900,1,7),7))
),
timevalue( PlannedVisitStartTime -7/24),
timevalue(PlannedVisitStartTime -8/24))</formula>
    <label>Planned Start Time For Email</label>
    <type>Time</type>
</CustomField>