force-app/main/default/objects/Visit/fields/CADMV_PreviousStatus__c.field-meta.xml
<CustomField>
    <fullName>CADMV_PreviousStatus__c</fullName>
    <label>Previous Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>