force-app/main/default/objects/Visit/fields/CADMV_PreviousVisitorId__c.field-meta.xml
<CustomField>
    <fullName>CADMV_PreviousVisitorId__c</fullName>
    <label>Previous Visitor Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>