force-app/main/default/objects/Visit/fields/CADMV_RCVIdFileUpload__c.field-meta.xml
<CustomField>
    <fullName>CADMV_RCVIdFileUpload__c</fullName>
    <label>RCV Id File Upload</label>
    <length>255</length>
    <type>Text</type>
</CustomField>