force-app/main/default/objects/Visit/fields/CADMV_RescheduleReason__c.field-meta.xml
<CustomField>
    <fullName>CADMV_RescheduleReason__c</fullName>
    <label>Reschedule Or Cancelled Reason</label>
    <type>TextArea</type>
</CustomField>