force-app/main/default/objects/Visit/fields/CADMV_Status__c.field-meta.xml
<CustomField>
    <fullName>CADMV_Status__c</fullName>
    <description>Visit status used as a replacement of ootb field to make it useable for all scenarios. Captures inspection process.  DO NOT UPDATE THESE PICKLIST VALUES WITHOUT ALSO UPDATING THE CONDITIONAL LOGIC ON THE MANAGE INSPECTIONS FLEX CARD</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending Inspector Assignment</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>Rescheduled</fullName>
            </value>
            <value>
                <fullName>Scheduled</fullName>
            </value>
            <value>
                <fullName>Passed</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
            <value>

                <fullName>Failed - Photos Required</fullName>
            </value>
            <value>
                <fullName>Failed - Follow Up Photos Submitted</fullName>
            </value>
            <value>
                <fullName>Failed - Physical Re-Inspection Required</fullName>

                
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>