force-app/main/default/objects/Visit/fields/CADMV_SupervisorId__c.field-meta.xml
<CustomField>
    <fullName>CADMV_SupervisorId__c</fullName>
    <description>Stores the supervisor information</description>
    <label>Supervisor Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>