force-app/main/default/objects/Visit/fields/CADMV_TerritoryEmail__c.field-meta.xml
<CustomField>
    <fullName>CADMV_TerritoryEmail__c</fullName>
    <description>Global email used for the applicant to reach out if any information needs to be shared / support</description>
    <label>Territory Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>