force-app/main/default/objects/Visit/fields/CADMV_VisitorFilter__c.field-meta.xml
<CustomField>
    <fullName>CADMV_VisitorFilter__c</fullName>
    <description>Field captures the current user with the assigned inspector to later be used on the report</description>
    <formula>If(VisitorId=$User.Id,1,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Visitor Filter</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>