force-app/main/default/objects/Visit/fields/CADXP_ApplicantEmail__c.field-meta.xml
<CustomField>
    <fullName>CADXP_ApplicantEmail__c</fullName>
    <label>Applicant Email DO NOT USE</label>
    <type>Email</type>
</CustomField>