force-app/main/default/objects/Visit/recordTypes/CADMV_NewVisit.recordType-meta.xml
<RecordType>
    <fullName>CADMV_NewVisit</fullName>
    <active>true</active>
    <label>New Visit</label>
</RecordType>