force-app/main/default/objects/Visit/recordTypes/CADMV_OldVisit.recordType-meta.xml
<RecordType>
    <fullName>CADMV_OldVisit</fullName>
    <active>true</active>
    <label>Old Visit</label>
</RecordType>