force-app/main/default/objects/Visit/recordTypes/CADMV_StaffLayout.recordType-meta.xml
<RecordType>
    <fullName>CADMV_StaffLayout</fullName>
    <active>true</active>
    <label>CADMV Staff Layout</label>
</RecordType>