force-app/main/default/objects/Visit/validationRules/Inspector_Shouldnt_Change_Visitor_Id.validationRule-meta.xml
<ValidationRule>
    <fullName>Inspector_Shouldnt_Change_Visitor_Id</fullName>
    <active>true</active>
    <description>Inspector Shouldnt Change visitor id</description>
    <errorConditionFormula>AND($UserRole.Name = &apos;Inspector&apos; , OR(ISCHANGED( PlaceId ) ,ISCHANGED( PlannedVisitStartTime),ISCHANGED( OwnerId ),ISCHANGED( InstructionDescription ),ISCHANGED( VisitorId ),ISCHANGED(  PlannedVisitEndTime ),ISCHANGED(  CADMV_LicenseType__c )))</errorConditionFormula>
    <errorMessage>Sorry!! Fields are read only.</errorMessage>
</ValidationRule>