force-app/main/default/objects/Visit/listViews/All_Visit.listView-meta.xml
<ListView>
    <fullName>All_Visit</fullName>
    <columns>Name</columns>
    <columns>CADMV_Status__c</columns>
    <columns>CADMV_LicenseType__c</columns>
    <columns>Account</columns>
    <columns>PlannedVisitStartTime</columns>
    <columns>PlannedVisitEndTime</columns>
    <columns>Service_Appointment__c</columns>
    <columns>CreatedDate</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>